--- a/index.html
+++ b/index.html
@@ -8,53 +8,47 @@
   />
 
   <head>
-    <title>Gladis Fenwick - HOME</title>
+    <title>SnepGryphon.gay</title>
     <meta name="viewport" content="width=device-width"/>
   </head>
 
   <body>
     <div class="main-container">
       <div>
-        <img src="./assets/gladis_site.png" class="pfp"/>
+        <img src="./assets/XFznk414_400x400.jpg" class="pfp"/>
       </div>
       <div class="page-header">
-        Gladis<br />Fenwick<br />
-        <div class="tag-line">@GladisOrca</div>
+        Reho<br />Daenerys<br />
+        <div class="tag-line">@SnepGryphon</div>
       </div>
       <div style="flex: 1"></div>
 
       <div class="button-container">
-        <a class="a-container" href="https://www.twitter.com/GladisOrca">
+        <a class="a-container" href="https://www.twitter.com/snepgryphon">
           <button class="link-button" role="button">Twitter</button>
         </a>
       </div>
 
       <div class="button-container">
-        <a class="a-container" href="https://www.furtrack.com/user/gladisorca">
-          <button class="link-button" role="button">FurTrack</button>
+        <a class="a-container" href="https://www.furtrack.com/user/snepgryphon">
+          <button class="link-button" role="button">FurTrack (Coming Soon)</button>
         </a>
       </div>
 
       <div class="button-container">
-        <a class="a-container" href="https://t.me/zayrefox">
+        <a class="a-container" href="https://t.me/snepgryphon">
           <button class="link-button" role="button">Telegram</button>
         </a>
       </div>
 
       <div class="button-container">
-        <a class="a-container" href="https://bsky.app/profile/orca.fish">
+        <a class="a-container" href="https://bsky.app/profile/snepgryphon.bsky.social">
           <button class="link-button" role="button">BlueSky</button>
         </a>
       </div>
 
       <div class="button-container">
-        <a class="a-container" href="https://www.furaffinity.net/user/gladisorca">
-          <button class="link-button" role="button">FurAffinity</button>
-        </a>
-      </div>
-
-      <div class="button-container">
-        <a class="a-container" href="https://www.discordapp.com/users/510650752205848578">
+        <a class="a-container" href="https://www.discordapp.com/users/639708783161114626">
           <button class="link-button" role="button">Discord</button>
         </a>
       </div>
