Added Email button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
           <button class="link-button" role="button">Discord</button>
         </a>
       </div>
+
+      <div class="button-container">
+        <a class="a-container" href="mailto:reho@snepgryphon.gay">
+          <button class="link-button" role="button">Email</button>
+        </a>
+      </div>
     </div>
   </body>
 </html>
