Added Email button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="button-container">
         <a class="a-container" href="mailto:reho@snepgryphon.gay">
-          <button class="link-button" role="button">Email</button>
+          <button class="link-button" role="button">Email (reho@snepgryphon.gay)</button>
         </a>
       </div>
     </div>
